src/test/ui/mismatched_types/E0631.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/E0631.rs:17:5
   |
LL |     foo(|_: isize| {}); //~ ERROR type mismatch
   |     ^^^ ---------- found signature of `fn(isize) -> _`
   |     |
   |     expected signature of `fn(usize) -> _`
   |
note: required by `foo`
  --> $DIR/E0631.rs:13:1
   |
LL | fn foo<F: Fn(usize)>(_: F) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0631]: type mismatch in closure arguments
  --> $DIR/E0631.rs:18:5
   |
LL |     bar(|_: isize| {}); //~ ERROR type mismatch
   |     ^^^ ---------- found signature of `fn(isize) -> _`
   |     |
   |     expected signature of `fn(usize) -> _`
   |
note: required by `bar`
  --> $DIR/E0631.rs:14:1
   |
LL | fn bar<F: Fn<usize>>(_: F) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0631]: type mismatch in function arguments
  --> $DIR/E0631.rs:19:5
   |
LL |     fn f(_: u64) {}
   |     ------------ found signature of `fn(u64) -> _`
...
LL |     foo(f); //~ ERROR type mismatch
   |     ^^^ expected signature of `fn(usize) -> _`
   |
note: required by `foo`
  --> $DIR/E0631.rs:13:1
   |
LL | fn foo<F: Fn(usize)>(_: F) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0631]: type mismatch in function arguments
  --> $DIR/E0631.rs:20:5
   |
LL |     fn f(_: u64) {}
   |     ------------ found signature of `fn(u64) -> _`
...
LL |     bar(f); //~ ERROR type mismatch
   |     ^^^ expected signature of `fn(usize) -> _`
   |
note: required by `bar`
  --> $DIR/E0631.rs:14:1
   |
LL | fn bar<F: Fn<usize>>(_: F) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0631`.
